--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 discord.py
-httpx
+httpx[http2,brotli]>=0.27.0  # Updated with performance features and compression support
 google-genai >= 0.7.0 # Ensure a recent version for potential API changes
 openai >= 1.3.0 # Ensure a recent version
 pyyaml
