--- a/config/config-example.yaml
+++ b/config/config-example.yaml
@@ -387,7 +387,7 @@ alternative_search_query_generation:
     Today's date is {current_date}.
   search_query_generation_prompt_template: |
     <task>
-    Analyze the latest query to determine if it requires web search. Consider the chat history for context.
+    Analyze the latest query to determine if web search is needed. By default, ENABLE web search for most queries to provide the most accurate and up-to-date information.
     Pay special attention to explicit search directives in the query.
     </task>
 
@@ -404,41 +404,60 @@ alternative_search_query_generation:
     </explicit_directives>
 
     <criteria>
-    Web search IS required when the query asks about:
-    - Current events, news, or recent developments
-    - Real-time information (prices, weather, stock data)
-    - Specific facts that may have changed recently
-    - Information about new products, services, or updates
-    - People, places, or organizations where current status matters
+    Web search should be DISABLED ONLY for very basic queries such as:
+    - Simple arithmetic or mathematical calculations (e.g., "What is 2+2?")
+    - Basic definitions of common words or extremely well-established concepts
+    - Simple coding syntax questions that don't involve recent versions/updates
+    - Requests for the assistant's opinion or creative writing
+    - Analysis of information already provided in the chat
 
-    Web search is NOT required when the query asks about:
-    - General knowledge or established facts
-    - Conceptual explanations or definitions
-    - Personal opinions or advice
-    - Mathematical calculations or logic problems
-    - Analysis of provided information
+    For ALL OTHER queries, web search should be ENABLED, including but not limited to:
+    - Any factual questions (even if they seem general)
+    - Questions about people, places, organizations, or things
+    - Technical questions or explanations
+    - Historical events or dates
+    - Scientific concepts or theories
+    - Product information or comparisons
+    - How-to guides or tutorials
+    - Current events or recent developments
+    - Any query where having the latest information would be beneficial
     </criteria>
 
     <instructions>
     1. First check for explicit directives ("SEARCH THE NET" or "DO NOT SEARCH THE NET")
     2. If explicit directive found, follow it and clean the query text for search generation
-    3. If no explicit directive, analyze the latest query in the context of the chat history
-    4. Determine if web search is required based on the criteria above
-    5. If web search is required, generate specific search queries that would find the needed information
-    6. For queries with multiple distinct subjects, create separate search queries for each
-    7. Return your response in the exact JSON format shown in the examples
+    3. If no explicit directive, determine if the query is one of the VERY BASIC types listed above
+    4. DEFAULT TO ENABLING web search unless the query clearly falls into the very basic category
+    5. When in doubt, ENABLE web search to ensure the best possible answer
+    6. If web search is enabled, generate specific search queries that would find the needed information
+    7. For queries with multiple distinct subjects, create separate search queries for each
+    8. Return your response in the exact JSON format shown in the examples
     </instructions>
 
     <examples>
+    <example>
+    <chat_history>
+    User: Help me with math
+    Assistant: I'd be happy to help with math problems...
+    </chat_history>
+    <latest_query>What is 15 + 27?</latest_query>
+    <o>
+    {"web_search_required": false}
+    </o>
+    </example>
+
     <example>
     <chat_history>
     User: What is machine learning?
     Assistant: Machine learning is a subset of artificial intelligence...
     </chat_history>
     <latest_query>Can you explain deep learning?</latest_query>
-    <output>
-    {"web_search_required": false}
-    </output>
+    <o>
+    {
+      "web_search_required": true,
+      "search_queries": ["deep learning explanation tutorial latest techniques"]
+    }
+    </o>
     </example>
 
     <example>
@@ -447,7 +466,7 @@ alternative_search_query_generation:
     Assistant: Electric vehicles are becoming increasingly popular...
     </chat_history>
     <latest_query>What are Tesla's latest Model 3 prices and what new features did Apple announce for iPhone 15?</latest_query>
-    <output>
+    <o>
     {
       "web_search_required": true,
       "search_queries": [
@@ -455,21 +474,32 @@ alternative_search_query_generation:
         "Apple iPhone 15 new features announcement"
       ]
     }
-    </output>
+    </o>
     </example>
 
     <example>
     <chat_history>
-    User: Tell me about climate change
-    Assistant: Climate change refers to long-term shifts in global temperatures...
+    User: Tell me about Python
+    Assistant: Python is a versatile programming language...
     </chat_history>
-    <latest_query>What were the key outcomes of the latest UN climate summit?</latest_query>
-    <output>
+    <latest_query>What is the Python programming language?</latest_query>
+    <o>
     {
       "web_search_required": true,
-      "search_queries": ["UN climate summit latest outcomes 2024"]
+      "search_queries": ["Python programming language overview features uses"]
     }
-    </output>
+    </o>
+    </example>
+
+    <example>
+    <chat_history>
+    User: I need creative help
+    Assistant: I'd be happy to help with creative writing...
+    </chat_history>
+    <latest_query>Write me a poem about the sunset</latest_query>
+    <o>
+    {"web_search_required": false}
+    </o>
     </example>
 
     <example>
