refactor: remove legacy code and cleanup pass statements
Removes placeholder pass statements and cleans up legacy or unused code across messaging, bot, and service modules.
Refactors table rendering logic to rely on Playwright, removing outdated implementations based on weasyprint, html2image, and manual PIL drawing.
Updates dependency list to reflect library changes.
Improves maintainability and lays groundwork for future enhancements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,5 @@ crawl4ai
 open-deep-research>=0.0.15
 # Additional dependencies for markdown table rendering
 html2image
-weasyprint
+playwright
+aiohttp
